--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,36 @@
 [build-system]
-requires = ["setuptools>=61.0"]
+requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "cargame"
-version = "1.0.0"
-description = "Terminal Car Racing Game"
+version = "1.0.1"
+description = "Terminal car racing game (native C++ binary wrapped with Python CLI)."
 readme = "README.md"
 requires-python = ">=3.7"
+license = { text = "MIT" }
+authors = [{ name = "Aswin" }]
+keywords = ["game", "terminal", "racing", "cli"]
+classifiers = [
+  "License :: OSI Approved :: MIT License",
+  "Programming Language :: C++",
+  "Programming Language :: Python :: 3",
+  "Operating System :: Microsoft :: Windows",
+  "Operating System :: POSIX :: Linux",
+  "Topic :: Games/Entertainment",
+]
+
+[project.urls]
+"Homepage" = "https://github.com/ASWINa1636/Car-game-publish-setup"
+"Source" = "https://github.com/ASWINa1636/Car-game-publish-setup"
+"Issues" = "https://github.com/ASWINa1636/Car-game-publish-setup"
 
 [project.scripts]
 car-game = "cargame.runner:main"
 
 [tool.setuptools]
+packages = ["cargame"]
 include-package-data = true
-
-[tool.setuptools.packages.find]
-where = ["."]
-include = ["cargame"]
 
 [tool.setuptools.package-data]
 cargame = ["bin/*"]
